jerry-core/parser/js/new-parser/tests/js/lexer/regexp-duplicated-flag.js.expected

--- Script parsing start ---


--- Script parsing end ---

Parse error 'Duplicated regexp flag.' at line: 3 col: 9
