jerry-core/parser/js/new-parser/tests/js/lexer/regexp-duplicated-flag.js
/* This test contains regexp literal parser tests. */

	/ab/iggm
